--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,67 +1,17 @@
-* {
-    box-sizing: border-box;
-}
-
-body {
-    color: #777777;
-    font-family: Arial, Helvetica, sans-serif;
-    line-height: 20px;
-    text-align: left;
-    width: 960px;
-}
-
-header {
-    float: left;
-    background-color: #4aaaa5;
-    border-bottom: none;
-    color:#ffffff;
-    height: 100%;
-    width: 270px;
-    margin-left: 125px;
-    margin-bottom: 0;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    text-align: center;
-    font-size: 1.5em;
-    font-weight: bold;
-    vertical-align: middle;
-    padding-top: 15px;
-}
-
+h1,
 h2,
 h3 {
-    color: #4aaaa5;
-    border-bottom: 3px solid #dddddd;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    margin-top: 1px;
-    padding-bottom: 3px;
+    background-color: #4aaaa5;
+    color: #ffffff;
 }
 
-nav {
-    width: 270px;
-    float: right;
-    text-align: center;
-    margin-right: 125px;
+button.navbar-toggler {
+    background-color: white;
 }
 
-ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-li {
-    float: left;
-    width: 33%;
-    padding: 10px;
-}
-
-li.border {
-    border-right: 1px solid #dddddd;
-    padding: 10px;
-}
-a {
-    color: #777777;
-    text-decoration: none;
+.nav-link {
+    background-color: #4aaaa5;
+    color: #ffffff;
 }
 
 .icon {
@@ -71,61 +21,15 @@ a {
     border-right: none;
 }
 
-section {
-    background-color: #ffffff;
-    float: left;
-    color: #777777;
-    border: 2px solid #dddddd;
-}
-
-input,
-textarea {
-    width: 100%;
-    padding: 10px 20px 10px 10px;
-    margin: 8px;
-    border-color: #dddddd;
-    border-style: solid;
-    border-width: thin;
-}
-
-footer {
-    clear:both;
-    margin: 0 auto;
-    vertical-align: middle;
-    padding: 18px;
-    height: 70px;
-    background-color: #666666;
-    width: 100%;
-    border-bottom: none;
-    color: #777777;
-    text-align: center;
-}
-
-.header-container {
-    border-bottom: 2px solid #cccccc;
-    background-color: #ffffff;
-    height: 60px;
-}
-
-.main-container {
-    clear: both;
-    overflow: auto;
-    margin: 0 auto;
-    background-image: url("../images/what-the-hex.png");
-    height: 650px;
-    width: 100%;
-    border-bottom: 5px solid #4aaaa5;
-}
-
 .box {
     display: inline-block;
-    width: 250px;
-    height: 100px;
-    margin: 20px;
+    width:100%;
+    height: 10%;
+    margin: 0%;
 }
 
-.projects {
-    float: left;
+.project {
+    float:left;
     position: relative;
     top: -10px;
     width: 100%;
@@ -134,67 +38,71 @@ footer {
 .project-title {
     float: left;
     position: relative;
-    top: -50px;
+    top: -80px;
     width: 100%;
-    height: 30px;
+    height: 35px;
+    padding-top: 5px;
     background-color: #4aaaa5;
     color: #ffffff;
     text-align: center;
+}
+
+.container {
+    padding-top: 20px;
+}
+
+.list-group {
+    margin-bottom: 0;
+}
+
+.list-group-item {
+    margin-left: 2%;
+    margin-right: 2%;
+    Width: 60%;
+    float: left;
+}
+
+.page-header {
+    border-bottom: 2px solid #ccc;
+    margin: 20px 0 25px;
+}
+
+.page-header {
+    color: #4aaaa5;
+}
+
+.navbar-default, 
+.nav-item {
+    background-color: #4aaaa5;
+}
+
+.navbar-default .navbar-brand {
+    color: #ffffff;
+}
+
+.navbar-default .navbar-nav a {
+    color: #ffffff; 
+}
+
+.img-thumbnail {
+    margin-bottom: 15px;
+}
+
+footer,
+.container-footer {
+    background-color: #777 !important;
 }
 
 .btn {
-    background-color: #4aaaa5;
-    color: #ffffff;
-    width: 100px;
-    height: 40px;
-    font-size: 16px;
-    border: none;
-    position: relative;
-    top: -8px;
+    margin-bottom: 20px;
 }
 
-#social-links {
-    float: right;
-    padding: 10px;
-    width: 270px;
-    top: 10px;
-    text-align: center;
-    margin-right: 125px;
-    margin-top: -5px;
+body {
+    background-image: url("../images/what-the-hex.png");
 }
 
-#main-bio,
-#contact-form,
-#portfolio {
-    position: relative;
-    text-align: left;
-    width: 650px;
-    top: 30px;
-    margin-left: 125px;
-    margin-bottom: 50px;
+.list-inline {
+    display: inline-block !important;
 }
 
-#main-bio {
-    height: auto;
-    padding: 20px;
-}
-
-#contact-form {
-    height: 400px;
-    padding: 20px;
-}
-
-#portfolio {
-    padding: 20px;
-    height: 400px;
-    overflow: auto;
-}
-
-#bio-image {
-    clear: both;
-    float: left;
-    margin-right: 20px;
-    width: 200px;
-    height: 200px;
-}
 
